# outil-predimensionnement-poutre

./: .gitignore  LICENSE  README.md  projet_poutre_v10.py  pyproject.toml
.github/workflows/: ci.yml
docs/: analyse_modele_initial.md  architecture_initiale.md  plan_reconstruction_semaine_1.md
resultats/: cas_reference_initial.md  cas_reference_reconstruit.csv  resultats_poutre_acier.csv  resultats_poutre_aluminium.csv
src/poutre/: __init__.py  __main__.py  calculs.py  dimensionnement.py  export.py  interface.py  materiaux.py  modal.py  modeles.py  optimisation.py
tests/: test_calculs.py  test_export_api.py  test_materiaux_modeles.py  test_modal.py  test_optimisation_dimensionnement.py
validation_ansys/: README.md  configuration_modele_ansys.md  convergence_maillage.md  protocole_reconstruction.md  rapport_validation_ansys.md
validation_ansys/modal/: frequences_modales.csv  rapport_validation_modale.md
