[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "outil-predimensionnement-poutre"
version = "1.0.1"
description = "Outil Python de pré-dimensionnement d'une poutre encastrée"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mohamed Alae Mountassir" },
]
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/MOUNAlae/outil-predimensionnement-poutre"

[project.scripts]
poutre = "poutre.interface:lancer_interface"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.coverage.run]
source = ["poutre"]
branch = true
omit = [
    "src/poutre/interface.py",
    "src/poutre/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true